--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                   </p>
                   <p>I am interested in computer vision and machine learning, especially 3D vision and its application to robotics and graphics.
                   </p>
+                  <p>The website is still under construction.
+                </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=2GKLw94AAAAJ&hl=en">Google Scholar</a>
@@ -70,7 +72,7 @@
             </tbody>
           </table>
 
-          <table
+<!--          <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
@@ -94,9 +96,9 @@
                   Fatih Porikli, 
                   Xiaolong Wang
                   <br>
-                  <em>European Conference on Computer Vision (<a href="https://eccv2022.org/"> ECCV</a>)</em>, 2022
+                  <em>European Conference on Computer Vision (<a href="https://eccv2022.org/"> ECCV</a>)</em>, 2022  -->
                   <!-- (<span style="color: red;">Oral</span>) -->
-                  <br>
+<!--                  <br>
                   <a href="https://arxiv.org/abs/2206.08655">arXiv</a>
                   /
                   <a href="https://github.com/hzhupku/IFA">code</a>
@@ -104,7 +106,7 @@
                 </td>
               </tr>
             </tbody>
-          </table>
+          </table>  -->
 
         </td>
       </tr>
