--- a/self-pose.html
+++ b/self-pose.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="GroupViT: Semantic Segmentation Emerges from Text Supervision.">
+        content="Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild.">
   <meta name="keywords" content="Vision Transformer, Text Supervision">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GroupViT: Semantic Segmentation Emerges from Text Supervision</title>
+  <title>Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
