--- a/self-pose.html
+++ b/self-pose.html
@@ -32,37 +32,35 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">GroupViT: Semantic Segmentation Emerges from Text Supervision</h1>
+          <h1 class="title is-1 publication-title">Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://jerryxu.net">Jiarui Xu</a><sup>1*</sup>,</span>
+              <a href="https://kywind.github.io">Kaifeng Zhang</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://research.nvidia.com/person/shalini-gupta">Shalini De Mello</a><sup>2</sup>,</span>
+              <a href="https://oasisyang.github.io">Yang Fu</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://research.nvidia.com/person/sifei-liu">Sifei Liu</a><sup>2</sup>,
+              <a href="https://kywind.github.io/self-pose">Shubhankar Borse</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://wonmin-byeon.github.io/">Wonmin Byeon</a><sup>2</sup>,
+              <a href="https://kywind.github.io/self-pose">Hong Cai</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="http://www.tmbdev.net/">Thomas Breuel</a><sup>2</sup>,
+              <a href="https://kywind.github.io/self-pose">Fatih Porikli</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://research.nvidia.com/person/jan-kautz">Jan Kautz</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://xiaolonw.github.io/">Xiaolong Wang</a><sup>1</sup>
+              <a href="https://xiaolonw.github.io/">Xiaolong Wang</a><sup>2</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
+            <span class="author-block"><sup>2</sup>Tsinghua University,</span>
             <span class="author-block"><sup>1</sup>University of California San Diego,</span>
-            <span class="author-block"><sup>2</sup>NVIDIA</span>
+            <span class="author-block"><sup>2</sup>Qualcomm</span>
           </div>
-          <div class="is-size-6 publication-authors">
+          <!--<div class="is-size-6 publication-authors">-->
             <!-- <span class="author-block">(* Jiarui Xu was an intern at NVIDIA during the project)</span> -->
-            <span class="author-block">(* the work was done at an internship at NVIDIA)</span>
-          </div>
+          <!--  <span class="author-block">(* the work was done at an internship at NVIDIA)</span>
+          </div> -->
 
           <div class="column has-text-centered">
             <div class="publication-links">
@@ -143,10 +141,10 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video autoplay muted loop playsinline height="100%">
-<!--        <source src="figs/website_teaser.m4v" type="video/mp4">  -->
+<!--       <video autoplay muted loop playsinline height="100%">
+        <source src="figs/website_teaser.m4v" type="video/mp4">
         <source src="images/dmcontrol-gb.png" type="image/png">
-      </video>
+      </video>  -->
       <h2 class="subtitle has-text-centered">
         <span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.
       </h2>
@@ -209,7 +207,7 @@
         <!-- <video autoplay muted loop width="100%">
           <source src="figs/groupvit_overview.mp4" type="video/mp4">
         </video> -->
-        <img src="images/profile.jpeg" alt="">
+        <!-- <img src="images/profile.jpeg" alt="">-->
       </div>
     </div>
     
@@ -221,9 +219,10 @@
         The segment tokens assigned to the same group are merged together and represent new segment tokens that are input to the next grouping stage.</p>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
+        <!-- 
         <video autoplay muted loop playsinline controls>
           <source src="images/dmcontrol-gb.png" type="image/png">
-        </video>
+        </video> -->
       </div>
     </div>
 
@@ -241,9 +240,10 @@
           </p>
         </div>
       </div>
+      <!--
       <video autoplay muted loop playsinline width="100%" controls>
         <source src="images/dmcontrol-gb.png" type="image/png">
-      </video>
+      </video>-->
   </div>
 </section>
 
