--- a/self-pose.html
+++ b/self-pose.html
@@ -108,9 +108,10 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Official Code</span>
+                  <span>Code</span>
                   </a>
               </span>
+              <!--
               <span class="link-block">
                 <a href="https://github.com/xvjiarui/GroupViT"
                    class="external-link button is-normal is-rounded is-dark">
@@ -129,7 +130,7 @@
                   </span>
                   <span>Demo</span>
                   </a>
-              </span>
+              </span>-->
 
           </div>
         </div>
