--- a/index.html
+++ b/index.html
@@ -27,20 +27,21 @@
                   <p style="text-align:center">
                     <name>Kaifeng Zhang</name>
                   </p>
-                  <p>I am a senior undergraduate student at Tsinghua University, majoring in computer science.
+                  <p>I am a senior undergraduate student at Tsinghua University (Yao Class), majoring in computer science and artificial intelligence.
                   </p>
-                  <p>I am interested in computer vision and machine learning, especially 3D vision and its application to robotics and graphics.
+                  <p>I am interested in computer vision and machine learning, and especially diving deeper into 3D vision, self-supervised vision and their applications to robotics and graphics.
                   </p>
-                  <p>The website is still under construction.
+                  <p>Currently, I am very fortunate to work with Prof. Xiaolong Wang from UC San Diego. Before that, I also worked in the Tsinghua Vision and Robotics Lab, advised by Prof. Yang Gao.
+                  <p>The webpage is still under construction. :)
+                  </p>
                 </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
-                    <a href="https://scholar.google.com/citations?user=2GKLw94AAAAJ&hl=en">Google Scholar</a>
-                    &nbsp/&nbsp
+                    <!--<a href="https://scholar.google.com/citations?user=2GKLw94AAAAJ&hl=en">Google Scholar</a>&nbsp/&nbsp-->
                     <a href="https://github.com/kywind/">Github</a>
                   </p>
                 </td>
-                <td style="padding:2.5%;width:40%;max-width:40%">
+                <td style="padding:2.5%;width:35%;max-width:35%">
                   <a href="images/profile.jpeg"><img style="width:100%;max-width:100%" alt="profile photo"
                       src="images/profile.jpeg" class="hoverZoomLink"></a>
                 </td>
@@ -54,8 +55,8 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>News</heading>
                   <p>
-                    <li>I am looking for PhD programs starting from Fall 2023.</li>
-                    <li>One paper gets accepted to ECCV 2022 as oral presentation.</li>
+                      <li>One paper gets accepted to ECCV 2022 as oral presentation.</li>
+                      <li>I am looking for PhD programs starting from Fall 2023.</li>
                   </p>
                 </td>
               </tr>
@@ -72,31 +73,28 @@
             </tbody>
           </table>
 
-<!--          <table
+          <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src='images/dmcontrol-gb.png' width="160">
+                  <img src='images/sfc.png' width="160">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a
-                    href="https://arxiv.org/abs/2206.08655">
+                    href="https://arxiv.org/abs/2207.10456">
                     <papertitle>
-                      Learning Implicit Feature Alignment Function for Semantic Segmentation
+                      Semantic-Aware Fine-Grained Correspondence
                     </papertitle>
                   </a>
                   <br>
-                  Hanzhe Hu*, 
-                  Yinbo Chen*, 
-                  <strong>Jiarui Xu</strong>,
-                  Shubhankar Borse, 
-                  Hong Cai, 
-                  Fatih Porikli, 
-                  Xiaolong Wang
+                  Yingdong Hu, 
+                  Renhao Wang, 
+                  <strong>Kaifeng Zhang</strong>,
+                  Yang Gao
                   <br>
-                  <em>European Conference on Computer Vision (<a href="https://eccv2022.org/"> ECCV</a>)</em>, 2022  -->
+                  <em>European Conference on Computer Vision (<a href="https://eccv2022.org/"> ECCV</a>)</em>, 2022 <strong>(Oral)</strong>
                   <!-- (<span style="color: red;">Oral</span>) -->
 <!--                  <br>
                   <a href="https://arxiv.org/abs/2206.08655">arXiv</a>
