--- a/self-pose.html
+++ b/self-pose.html
@@ -146,10 +146,12 @@
         <source src="figs/website_teaser.m4v" type="video/mp4">
         <source src="images/dmcontrol-gb.png" type="image/png">
       </video>  -->
+      <img src="images/sample.jpeg" alt="">
       <h2 class="subtitle has-text-centered">
-        <span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.
+        Without using any 3D annotations like object models or pose, our model estimates the dense geometric correspondence between image and a canonical mesh, and 6D pose of objects.
+        <!--<span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.-->
       </h2>
-    </div>
+      </div>
   </div>
 </section>
 
@@ -162,14 +164,22 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
           <p>
-             Grouping and recognition are important components of visual scene understanding, e.g., for object detection and semantic segmentation. 
-             With end-to-end deep learning systems, grouping of image regions usually happens implicitly via top-down supervision from pixel-level recognition labels.  
-             Instead, in this paper, we propose to bring back the grouping mechanism into deep networks, which allows semantic segments to emerge automatically with only text supervision. 
-             We propose a hierarchical Grouping Vision Transformer (GroupViT), which goes beyond the regular grid structure representation and learns to group image regions into progressively larger arbitrary-shaped segments. 
-             We train GroupViT jointly with a text encoder on a large-scale image-text dataset via contrastive losses. 
-             <span style="font-weight:bold">With only text supervision and without any pixel-level annotations</span>, GroupViT learns to group together semantic regions and successfully transfers to the task of semantic segmentation in a zero-shot manner, i.e., without any further fine-tuning.  
-             It achieves a zero-shot accuracy of 51.2% mIoU on the PASCAL VOC 2012 and 22.3% mIoU on PASCAL Context datasets, and performs competitively to state-of-the-art transfer-learning methods requiring greater levels of supervision.
-          </p>
+            While 6D object pose estimation has wide applications across computer vision and robotics, 
+            it remains far from being solved due to the lack of annotations. 
+            The problem becomes even more challenging when moving to category-level 6D pose, 
+            which requires generalization to unseen instances. 
+            Current approaches are restricted by leveraging annotations from simulation or collected from humans. 
+            In this paper, we overcome this barrier by introducing a self-supervised learning approach 
+            trained directly on large-scale real-world object videos for category-level 6D pose estimation in the wild. 
+            Our framework reconstructs the canonical 3D shape of an object category 
+            and learns dense correspondences between input images and the canonical shape via surface embedding. 
+            For training, we propose novel geometrical cycle-consistency losses which construct 
+            cycles across 2D-3D spaces, across different instances and different time steps. 
+            The learned correspondence can be applied for 6D pose estimation and other downstream 
+            tasks such as keypoint transfer. Surprisingly, our method, without any human annotations or simulators, 
+            can achieve on-par or even better performance than previous supervised or semi-supervised methods 
+            on in-the-wild images. 
+           d</p>
           </div>
         </div>
     </div>
@@ -192,27 +202,21 @@
   </div>
 </section>
 
-
+<!--
 <section class="section">
   <div class="container is-max-widescreen">
     <h2 class="title is-3">Problem Overview</h2>
     <div class="columns">
       <div class="column">
-        <p>First, we jointly train GroupViT and a text encoder using paired image-text data. 
+        <p>We train a category-level 6D object pose estimation model using in-the-wild video dataset in a self-supervised manner.
+          
           With GroupViT, meaningful semantic grouping automatically emerges without any mask annotations. 
           Then, we transfer the trained GroupViT model to the task of zero-shot semantic segmentation.</p>
       </div>
     </div>
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-three-fifths">
-        <!-- <video autoplay muted loop width="100%">
-          <source src="figs/groupvit_overview.mp4" type="video/mp4">
-        </video> -->
-        <!-- <img src="images/profile.jpeg" alt="">-->
-      </div>
-    </div>
+    </div>-->
     
-    <h2 class="title is-3">GroupViT Architecture</h3>
+    <h2 class="title is-3">Model Architecture</h3>
     <p> GroupViT contains a hierarchy of Transformer layers grouped into stages, each operating on progressively larger visual segments.
         The images on the right show visual segments that emerge during different grouping stages.
         The lower stage groups pixels into object parts, e.g., noses and legs of elephants; and the higher stage further merges them into entire objects, e.g., the whole elephant and the background forest.
@@ -220,6 +224,7 @@
         The segment tokens assigned to the same group are merged together and represent new segment tokens that are input to the next grouping stage.</p>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
+        <img src="images/sample.jpeg" alt="">
         <!-- 
         <video autoplay muted loop playsinline controls>
           <source src="images/dmcontrol-gb.png" type="image/png">
@@ -230,35 +235,26 @@
   </div>
 </section>
 
-<section>
-  <div class="container is-max-widescreen">
-    <h2 class="title is-3">Concepts Learnt by Group Tokens</h2>
-      <div class="columns">
-        <div class="column">
-          <p>
-            We select some group tokens and highlight the attention regions across images in the PASCAL VOC 2012 dataset.
-            Even there is <span style="font-weight:bold">no classification</span> yet, different group tokens are learning different semantic concepts.
-          </p>
-        </div>
-      </div>
-      <!--
-      <video autoplay muted loop playsinline width="100%" controls>
-        <source src="images/dmcontrol-gb.png" type="image/png">
-      </video>-->
-  </div>
-</section>
-
 <section class="hero is-small">
   <div class="hero-body">
   <div class="container is-max-widescreen">
     <h2 class="title is-3">Results</h2>
     <div class="columns">
       <div class="column">
-        <p>We evaluate GroupViT on Pascal VOC, Pascal Context, and COCO datasets. GroupViT is not trained on any semantic segmentation annotation, and yet could zero-shot transfer to semantic segmentation classes of any dataset without fine-tuning. </p>
+        <p></p>
       </div>
     </div>
 
-    <h3 class="title is-4">Pascal VOC (zero-shot transfer without fine-tuning)</h3>
+    <h3 class="title is-4">Wild6D</h3>
+    <img src="images/sample.jpeg" alt="">
+    <img src="images/sample.jpeg" alt="">
+
+    <h3 class="title is-4">REAL275 (transfer without fine-tuning)</h3>
+    <img src="images/sample.jpeg" alt="">
+
+    <h3 class="title is-4">CUB-200-2011</h3>
+    <img src="images/sample.jpeg" alt="">
+
 <!--      <video autoplay muted loop playsinline width="100%">
         <source src="figs/website_voc_results.m4v" type="video/mp4">
       </video>  
