--- a/self-pose.html
+++ b/self-pose.html
@@ -146,9 +146,9 @@
         <source src="figs/website_teaser.m4v" type="video/mp4">
         <source src="images/dmcontrol-gb.png" type="image/png">
       </video>  -->
-      <img src="images/sample.jpeg" alt="">
+      <img src="images/sample.png" alt="">
       <h2 class="subtitle has-text-centered">
-        Without using any 3D annotations like object models or pose, our model estimates the dense geometric correspondence between image and a canonical mesh, and 6D pose of objects.
+        Without using any 3D annotations, our model estimates the dense geometric correspondence between image and mesh, and the 6D pose of objects.
         <!--<span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.-->
       </h2>
       </div>
@@ -179,7 +179,7 @@
             tasks such as keypoint transfer. Surprisingly, our method, without any human annotations or simulators, 
             can achieve on-par or even better performance than previous supervised or semi-supervised methods 
             on in-the-wild images. 
-           d</p>
+           </p>
           </div>
         </div>
     </div>
@@ -202,9 +202,10 @@
   </div>
 </section>
 
-<!--
+
 <section class="section">
   <div class="container is-max-widescreen">
+    <!--
     <h2 class="title is-3">Problem Overview</h2>
     <div class="columns">
       <div class="column">
@@ -221,7 +222,7 @@
      </p>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
-        <img src="images/sample.jpeg" alt="">
+        <img src="images/sample.png" alt="">
         <!-- 
         <video autoplay muted loop playsinline controls>
           <source src="images/dmcontrol-gb.png" type="image/png">
@@ -234,7 +235,7 @@
       </p>
       <div class="columns is-centered has-text-centered">
         <div class="column is-fullwidth">
-          <img src="images/sample.jpeg" alt="">
+          <img src="images/sample.png" alt="">
           <!-- 
           <video autoplay muted loop playsinline controls>
             <source src="images/dmcontrol-gb.png" type="image/png">
@@ -256,14 +257,14 @@
     </div>
 
     <h3 class="title is-4">Wild6D</h3>
-    <img src="images/sample.jpeg" alt="">
-    <img src="images/sample.jpeg" alt="">
+    <img src="images/sample.png" alt="">
+    <img src="images/sample.png" alt="">
 
     <h3 class="title is-4">REAL275 (transfer without fine-tuning)</h3>
-    <img src="images/sample.jpeg" alt="">
+    <img src="images/sample.png" alt="">
 
     <h3 class="title is-4">CUB-200-2011</h3>
-    <img src="images/sample.jpeg" alt="">
+    <img src="images/sample.png" alt="">
 
 <!--      <video autoplay muted loop playsinline width="100%">
         <source src="figs/website_voc_results.m4v" type="video/mp4">
