--- a/self-pose.html
+++ b/self-pose.html
@@ -204,7 +204,7 @@
 
 
 <section class="section">
-  <div class="container is-max-widescreen">
+  <div class="container is-full-width">
     <!--
     <h2 class="title is-3">Problem Overview</h2>
     <div class="columns">
@@ -248,7 +248,7 @@
 
 <section class="hero is-small">
   <div class="hero-body">
-  <div class="container is-max-widescreen">
+  <div class="container is-full-width">
     <h2 class="title is-3">Results</h2>
     <div class="columns">
       <div class="column">
