--- a/self-pose.html
+++ b/self-pose.html
@@ -204,7 +204,7 @@
 
 
 <section class="section">
-  <div class="container is-full-width">
+  <div class="container is-max-widescreen">
     <!--
     <h2 class="title is-3">Problem Overview</h2>
     <div class="columns">
@@ -218,8 +218,10 @@
     </div>-->
     
     <h2 class="title is-3">Model Architecture</h3>
-    <p> Given the input image, the image encoder and feature extractor predict per-pixel features, and establish dense geometric correspondence with mesh per-vertex features. 2D reconstruction loss and cycle consistency loss provide supervision for the model.
-     </p>
+    <div class="content has-text-justified">
+      <p> Given the input image, the image encoder and feature extractor predict per-pixel features, and establish dense geometric correspondence with mesh per-vertex features. 2D reconstruction loss and cycle consistency loss provide supervision for the model.
+      </p>
+    </div>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
         <img src="images/sample.png" alt="">
@@ -248,7 +250,7 @@
 
 <section class="hero is-small">
   <div class="hero-body">
-  <div class="container is-full-width">
+  <div class="container is-max-widescreen">
     <h2 class="title is-3">Results</h2>
     <div class="columns">
       <div class="column">
