--- a/self-pose.html
+++ b/self-pose.html
@@ -32,7 +32,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</h1>
+          <h1 class="title is-2 publication-title">Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://kywind.github.io">Kaifeng Zhang</a><sup>1</sup>,</span>
@@ -55,7 +55,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>2</sup>Tsinghua University,</span>
             <span class="author-block"><sup>1</sup>University of California San Diego,</span>
-            <span class="author-block"><sup>2</sup>Qualcomm</span>
+            <span class="author-block"><sup>2</sup>Qualcomm AI Research</span>
           </div>
           <!--<div class="is-size-6 publication-authors">-->
             <!-- <span class="author-block">(* Jiarui Xu was an intern at NVIDIA during the project)</span> -->
@@ -266,7 +266,7 @@
     <h3 class="title is-4">REAL275 (transfer without fine-tuning)</h3>
     <img src="images/sample.png" alt="">
     <br/>
-    
+
     <h3 class="title is-4">CUB-200-2011</h3>
     <img src="images/sample.png" alt="">
 
