--- a/self-pose.html
+++ b/self-pose.html
@@ -143,8 +143,8 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video autoplay muted loop playsinline height="100%">
-        <source src="vids/teaser.mp4" type="video/mp4">
-      </video>  -->
+        <source src="vids/self-pose/teaser.mp4" type="video/mp4">
+      </video>
       <!--<img src="images/self-pose-teaser.png" alt="">-->
       <h2 class="subtitle has-text-centered">
         Without using any 3D annotations, our model estimates the dense 2D-3D geometric correspondence and the 6D pose of objects.
@@ -226,7 +226,7 @@
         <!--<img src="images/sample.png" alt="">-->
         
         <video autoplay muted loop playsinline controls>
-          <source src="vids/method1.mp4" type="video/mp4">
+          <source src="vids/self-pose/method1.mp4" type="video/mp4">
         </video> 
       </div>
     </div>
