--- a/self-pose.html
+++ b/self-pose.html
@@ -225,7 +225,7 @@
       <div class="column is-fullwidth">
         <!--<img src="images/sample.png" alt="">-->
         
-        <video autoplay muted loop playsinline controls>
+        <video autoplay muted loop playsinline>
           <source src="vids/self-pose/method1.mp4" type="video/mp4">
         </video> 
       </div>
@@ -233,14 +233,25 @@
 
     <h2 class="title is-3">Cycle Consistency</h3>
       <p> 
+        The instance cycle consistency
       </p>
       <div class="columns is-centered has-text-centered">
         <div class="column is-fullwidth">
-          <img src="images/sample.png" alt="">
-          <!-- 
-          <video autoplay muted loop playsinline controls>
-            <source src="images/dmcontrol-gb.png" type="image/png">
-          </video> -->
+          <!--<img src="images/sample.png" alt="">-->
+          <video autoplay muted loop playsinline>
+            <source src="vid/self-pose/icc.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+      <p> 
+        The cross-instance and cross-time cycle consistency
+      </p>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-fullwidth">
+          <!--<img src="images/sample.png" alt="">-->
+          <video autoplay muted loop playsinline>
+            <source src="vid/self-pose/ccc.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
 
