--- a/self-pose.html
+++ b/self-pose.html
@@ -239,7 +239,7 @@
         <div class="column is-fullwidth">
           <!--<img src="images/sample.png" alt="">-->
           <video autoplay muted loop playsinline>
-            <source src="vid/self-pose/icc.mp4" type="video/mp4">
+            <source src="vids/self-pose/icc.mp4" type="video/mp4">
           </video>
         </div>
       </div>
@@ -250,7 +250,7 @@
         <div class="column is-fullwidth">
           <!--<img src="images/sample.png" alt="">-->
           <video autoplay muted loop playsinline>
-            <source src="vid/self-pose/ccc.mp4" type="video/mp4">
+            <source src="vids/self-pose/ccc.mp4" type="video/mp4">
           </video>
         </div>
       </div>
