--- a/self-pose.html
+++ b/self-pose.html
@@ -269,8 +269,20 @@
     </div>
 
     <h3 class="title is-4">Wild6D</h3>
-    <img src="images/sample.png" alt="">
-    <img src="images/sample.png" alt="">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-fullwidth">
+        <!--<img src="images/sample.png" alt="">-->
+        <video autoplay muted loop playsinline>
+          <source src="vids/self-pose/wild6d.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="column is-fullwidth">
+        <!--<img src="images/sample.png" alt="">-->
+        <video autoplay muted loop playsinline>
+          <source src="vids/self-pose/wild6d2.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
     <br/>
 
     <h3 class="title is-4">REAL275 (transfer without fine-tuning)</h3>
