--- a/self-pose.html
+++ b/self-pose.html
@@ -238,7 +238,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-fullwidth">
           <!--<img src="images/sample.png" alt="">-->
-          <video autoplay muted loop playsinline>
+          <video autoplay muted loop playsinline width="80%">
             <source src="vids/self-pose/icc.mp4" type="video/mp4">
           </video>
         </div>
