--- a/self-pose.html
+++ b/self-pose.html
@@ -276,6 +276,8 @@
           <source src="vids/self-pose/wild6d.mp4" type="video/mp4">
         </video>
       </div>
+    </div>
+    <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
         <!--<img src="images/sample.png" alt="">-->
         <video autoplay muted loop playsinline>
