--- a/self-pose.html
+++ b/self-pose.html
@@ -226,7 +226,7 @@
         <!--<img src="images/sample.png" alt="">-->
         
         <video autoplay muted loop playsinline>
-          <source src="vids/self-pose/method1.mp4" type="video/mp4">
+          <source src="vids/self-pose/method2.mp4" type="video/mp4">
         </video> 
       </div>
     </div>
@@ -238,22 +238,22 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-fullwidth">
           <!--<img src="images/sample.png" alt="">-->
-          <video autoplay muted loop playsinline width="80%">
-            <source src="vids/self-pose/icc.mp4" type="video/mp4">
+          <video autoplay muted loop playsinline>
+            <source src="vids/self-pose/cc.mp4" type="video/mp4">
           </video>
         </div>
       </div>
+      <!--
       <p> 
         The cross-instance and cross-time cycle consistency
       </p>
       <div class="columns is-centered has-text-centered">
         <div class="column is-fullwidth">
-          <!--<img src="images/sample.png" alt="">-->
           <video autoplay muted loop playsinline>
             <source src="vids/self-pose/ccc.mp4" type="video/mp4">
           </video>
         </div>
-      </div>
+      </div>-->
 
   </div>
 </section>
