--- a/self-pose.html
+++ b/self-pose.html
@@ -150,6 +150,14 @@
         Without using any 3D annotations, our model estimates the dense 2D-3D geometric correspondence and the 6D pose of objects.
         <!--<span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.-->
       </h2>
+      <video autoplay muted loop playsinline height="100%">
+        <source src="vids/self-pose/wild6d2.mp4" type="video/mp4">
+      </video>
+      <!--<img src="images/self-pose-teaser.png" alt="">-->
+      <h2 class="subtitle has-text-centered">
+        We can achieve accurate estimation results on diverse objects in the wild.
+        <!--<span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.-->
+      </h2>
       </div>
   </div>
 </section>
@@ -277,14 +285,7 @@
         </video>
       </div>
     </div>
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-fullwidth">
-        <!--<img src="images/sample.png" alt="">-->
-        <video autoplay muted loop playsinline>
-          <source src="vids/self-pose/wild6d2.mp4" type="video/mp4">
-        </video>
-      </div>
-    </div>
+    
     <br/>
 
     <h3 class="title is-4">REAL275 (transfer without fine-tuning)</h3>
