--- a/self-pose.html
+++ b/self-pose.html
@@ -151,7 +151,7 @@
         <!--<span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.-->
       </h2>
       <video autoplay muted loop playsinline height="100%">
-        <source src="vids/self-pose/wild6d2.mp4" type="video/mp4">
+        <source src="vids/self-pose/teaser-wild6d.mp4" type="video/mp4">
       </video>
       <!--<img src="images/self-pose-teaser.png" alt="">-->
       <h2 class="subtitle has-text-centered">
