--- a/self-pose.html
+++ b/self-pose.html
@@ -150,14 +150,12 @@
         Without using any 3D annotations, our model estimates the dense 2D-3D geometric correspondence and the 6D pose of objects.
         <!--<span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.-->
       </h2>
-      <video autoplay muted loop playsinline height="100%">
+      <!-- <video autoplay muted loop playsinline height="100%">
         <source src="vids/self-pose/teaser-wild6d.mp4" type="video/mp4">
       </video>
-      <!--<img src="images/self-pose-teaser.png" alt="">-->
       <h2 class="subtitle has-text-centered">
         We can achieve accurate estimation results on diverse objects in the wild.
-        <!--<span style="color: orange; font-weight:bold">Without using any mask annotations</span>, GroupVit groups the image into segments and outputs a semantic segmentation map.-->
-      </h2>
+      </h2> -->
       </div>
   </div>
 </section>
