--- a/self-pose.html
+++ b/self-pose.html
@@ -53,9 +53,9 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>2</sup>Tsinghua University,</span>
-            <span class="author-block"><sup>1</sup>UC San Diego,</span>
-            <span class="author-block"><sup>2</sup>Qualcomm AI Research</span>
+            <span class="author-block"><sup>1</sup>Tsinghua University,</span>
+            <span class="author-block"><sup>2</sup>UC San Diego,</span>
+            <span class="author-block"><sup>3</sup>Qualcomm AI Research</span>
           </div>
           <!--<div class="is-size-6 publication-authors">-->
             <!-- <span class="author-block">(* Jiarui Xu was an intern at NVIDIA during the project)</span> -->
@@ -295,7 +295,7 @@
       </div>
     </div>
 
-    <h3 class="title is-4">CUB</h3>
+    <h3 class="title is-4">CUB-200-2011</h3>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
         <img src="images/cubmatch.png" alt="">
