--- a/self-pose.html
+++ b/self-pose.html
@@ -66,7 +66,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2202.11094.pdf"
+                <a href="https://kywind.github.io/self-pose"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -75,7 +75,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2202.11094"
+                <a href="https://kywind.github.io/self-pose"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -83,7 +83,7 @@
                   <span>arXiv</span>
                 </a>
               </span>
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://youtu.be/DtJsWIUTW-Y"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -91,8 +91,8 @@
                   </span>
                   <span>Video</span>
                 </a>
-              </span>
-              <span class="link-block">
+              </span> -->
+              <!-- <span class="link-block">
                 <a href="groupvit_slide.key"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -100,15 +100,15 @@
                   </span>
                   <span>Slide</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/NVlabs/GroupViT"
+                <a href="https://kywind.github.io/self-pose"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span>Code (coming soon)</span>
                   </a>
               </span>
               <!--
@@ -345,12 +345,9 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{xu2022groupvit,
-  author    = {Xu, Jiarui and De Mello, Shalini and Liu, Sifei and Byeon, Wonmin and Breuel, Thomas and Kautz, Jan and Wang, Xiaolong},
-  title     = {GroupViT: Semantic Segmentation Emerges from Text Supervision},
-  journal   = {arXiv preprint arXiv:2202.11094},
-  year      = {2022},
-}</code></pre>
+    <pre><code>
+      -
+    </code></pre>
   </div>
 </section>
 
