change main vid

--- a/self-pose.html
+++ b/self-pose.html
@@ -194,7 +194,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/IeteYvPkpFk"ywind
+          <iframe src="https://drive.google.com/file/d/11IAEtN3LH6rrYFJz6CVysST4xMu5zNCy/preview"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
