change main vid

--- a/self-pose.html
+++ b/self-pose.html
@@ -193,10 +193,13 @@
       <!-- <div class="column is-four-fifths"> -->
       <div class="column is-full-width">
         <h2 class="title is-3">Video</h2>
-        <div class="publication-video">
-          <iframe src="https://drive.google.com/file/d/11IAEtN3LH6rrYFJz6CVysST4xMu5zNCy/preview"
+        <video autoplay loop playsinline controls width="100%">
+          <source src="https://drive.google.com/uc?export=download&id=1m1EBzBnyGR77VsQIAP7W4kLG2lan6-TM" type="video/mp4">
+        </video>
+        <!-- <div class="publication-video">
+          <iframe src="https://drive.google.com/uc?export=download&id=1LdBVEGJDQyt0-0QM2AOCw6UZJWmL_GoZ"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--/ Paper video. -->
