--- a/self-pose.html
+++ b/self-pose.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="description"
         content="Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild.">
-  <meta name="keywords" content="Vision Transformer, Text Supervision">
+  <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</title>
+  <title>Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -32,20 +32,20 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2 publication-title">Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</h1>
+          <h1 class="title is-2 publication-title">Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://kywind.github.io">Kaifeng Zhang</a><sup>1</sup>,</span>
             <span class="author-block">
               <a href="https://oasisyang.github.io">Yang Fu</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://kywind.github.io/self-pose">Shubhankar Borse</a><sup>3</sup>,
+              <a href="https://scholar.google.com/citations?user=ZsgWCyMAAAAJ&hl=en">Shubhankar Borse</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://kywind.github.io/self-pose">Hong Cai</a><sup>3</sup>,
+              <a href="https://herbertcai.github.io/">Hong Cai</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://kywind.github.io/self-pose">Fatih Porikli</a><sup>3</sup>,
+              <a href="https://www.porikli.com/">Fatih Porikli</a><sup>3</sup>,
             </span>
             <span class="author-block">
               <a href="https://xiaolonw.github.io/">Xiaolong Wang</a><sup>2</sup>
@@ -57,16 +57,12 @@
             <span class="author-block"><sup>2</sup>UC San Diego,</span>
             <span class="author-block"><sup>3</sup>Qualcomm AI Research</span>
           </div>
-          <!--<div class="is-size-6 publication-authors">-->
-            <!-- <span class="author-block">(* Jiarui Xu was an intern at NVIDIA during the project)</span> -->
-          <!--  <span class="author-block">(* the work was done at an internship at NVIDIA)</span>
-          </div> -->
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://kywind.github.io/self-pose"
+                <a href="https://arxiv.org/pdf/2210.07199.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -75,7 +71,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://kywind.github.io/self-pose"
+                <a href="https://arxiv.org/abs/2210.07199"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -83,25 +79,6 @@
                   <span>arXiv</span>
                 </a>
               </span>
-              <!-- <span class="link-block">
-                <a href="https://youtu.be/DtJsWIUTW-Y"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </span>
-                  <span>Video</span>
-                </a>
-              </span> -->
-              <!-- <span class="link-block">
-                <a href="groupvit_slide.key"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-slideshare"></i>
-                  </span>
-                  <span>Slide</span>
-                </a>
-              </span> -->
-              <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://kywind.github.io/self-pose"
                    class="external-link button is-normal is-rounded is-dark">
@@ -111,26 +88,6 @@
                   <span>Code (coming soon)</span>
                   </a>
               </span>
-              <!--
-              <span class="link-block">
-                <a href="https://github.com/xvjiarui/GroupViT"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Personal Code with Models</span>
-                  </a>
-              </span>
-
-              <span class="link-block">
-                <a href="https://huggingface.co/spaces/xvjiarui/GroupViT"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fa-solid fa-face-smiling-hands"></i>
-                  </span>
-                  <span>Demo</span>
-                  </a>
-              </span>-->
 
           </div>
         </div>
@@ -185,25 +142,17 @@
            </p>
           </div>
         </div>
-    </div>
-    <!--/ Abstract. -->
-
-    <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
-      <!-- <div class="column is-four-fifths"> -->
-      <div class="column is-full-width">
-        <h2 class="title is-3">Video</h2>
-        <video autoplay loop playsinline controls width="100%">
-          <source src="https://drive.google.com/uc?export=download&id=1m1EBzBnyGR77VsQIAP7W4kLG2lan6-TM" type="video/mp4">
-        </video>
-        <!-- <div class="publication-video">
-          <iframe src="https://drive.google.com/uc?export=download&id=1LdBVEGJDQyt0-0QM2AOCw6UZJWmL_GoZ"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div> -->
       </div>
-    </div>
-    <!--/ Paper video. -->
-
+      <!-- Paper video. -->
+      <div class="columns is-centered has-text-centered">
+        <!-- <div class="column is-four-fifths"> -->
+        <div class="column is-full-width">
+          <h2 class="title is-3">Video</h2>
+          <video autoplay loop playsinline controls width="100%">
+            <source src="https://drive.google.com/uc?export=download&id=1m1EBzBnyGR77VsQIAP7W4kLG2lan6-TM" type="video/mp4">
+          </video>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -211,17 +160,6 @@
 
 <section class="section">
   <div class="container is-max-widescreen">
-    <!--
-    <h2 class="title is-3">Problem Overview</h2>
-    <div class="columns">
-      <div class="column">
-        <p>We train a category-level 6D object pose estimation model using in-the-wild video dataset in a self-supervised manner.
-          
-          With GroupViT, meaningful semantic grouping automatically emerges without any mask annotations. 
-          Then, we transfer the trained GroupViT model to the task of zero-shot semantic segmentation.</p>
-      </div>
-    </div>
-    </div>-->
     
     <h2 class="title is-3">Method Overview</h3>
     <div class="content has-text-justified">
@@ -250,17 +188,6 @@
           </video>
         </div>
       </div>
-      <!--
-      <p> 
-        The cross-instance and cross-time cycle consistency
-      </p>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-fullwidth">
-          <video autoplay muted loop playsinline>
-            <source src="vids/self-pose/ccc.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>-->
 
   </div>
 </section>
@@ -309,38 +236,6 @@
         <img src="images/kp.png" alt="">
       </div>
     </div>
-
-      <!--<video autoplay muted loop playsinline width="100%">
-        <source src="figs/website_voc_results.m4v" type="video/mp4">
-      </video>  
-    <details>
-      <summary class="title is-6 button">Click here for more results on Pascal VOC</summary>
-      <video autoplay muted loop playsinline width="100%">
-        <source src="figs/website_voc_results_more.m4v" type="video/mp4">
-      </video>
-    </details>
-
-    <h3 class="title is-4">Pascal Context (zero-shot transfer without fine-tuning) </h3>
-      <video autoplay muted loop playsinline width="100%">
-        <source src="figs/website_ctx_results.m4v" type="video/mp4">
-      </video>
-    <details>
-      <summary class="title is-6 button">Click here for more results on Pascal Context</summary>
-      <video autoplay muted loop playsinline width="100%">
-        <source src="figs/website_ctx_results_more.m4v" type="video/mp4">
-      </video>
-    </details>
-
-    <h3 class="title is-4">COCO (zero-shot transfer without fine-tuning)</h3>
-      <video autoplay muted loop playsinline width="100%">
-        <source src="figs/website_coco_results.m4v" type="video/mp4">
-      </video>
-    <details>
-      <summary class="title is-6 button">Click here for more results on COCO</summary>
-      <video autoplay muted loop playsinline width="100%">
-        <source src="figs/website_coco_results_more.m4v" type="video/mp4">
-      </video>
-    </details>-->
   </div>
   </div>
 </section>
@@ -349,7 +244,12 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      -
+      @article{zhang2022self,
+        author    = {Zhang, Kaifeng and Fu, Yang and Borse, Shubhankar and Cai, Hong and Porikli, Fatih and Wang, Xiaolong},
+        title     = {Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild},
+        journal   = {arXiv preprint arXiv:2210.07199},
+        year      = {2022},
+      } 
     </code></pre>
   </div>
 </section>
@@ -362,7 +262,7 @@
          href="">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/xvjiarui" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/kywind" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
