--- a/self-pose.html
+++ b/self-pose.html
@@ -6,7 +6,7 @@
         content="Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild.">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</title>
+  <title>Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -32,7 +32,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2 publication-title">Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</h1>
+          <h1 class="title is-2 publication-title">Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://kywind.github.io">Kaifeng Zhang</a><sup>1</sup>,</span>
